
Changelog
=========

1.1.5 (unreleased)
------------------

- Fixes export error when using a unicode character in the resource title.
  Closes #165.
  [href]

- Spell email as 'E-Mail' in German - always. Fixes #166.
  [href]

1.1.4 (2014-08-18)
------------------

- Fixes allocation search not working correctly with partly available whole-day
  allocations. Closes #162.
  [href]

1.1.3 (2014-08-15)
------------------

- Fixes wrong times being used for whole day reservations in the search.
  [href]

- Changes search view to be way more ajaxy, giving the impression of a speedup.
  [href]

- Adds the ability to delete allocations found when searching. Fixes #161.
  [href]

1.1.2 (2014-08-12)
------------------

- Adds the ability to change the times of certain reservations.
  [href]

- Correctly deals with group-allocations in the search view.
  [href]

- Disable the reservation button if no selection is made in the search
  view.
  [href]

- Adds the ability to change the email address of a reservation.
  [href]

- Ensure that the session data is never shared between browsers, even if
  the same user is logged in.
  [href]

- Disables unload protection on search form.
  [href]

- Adds the ability to remove parts of a reservation (timespans).
  [href]

1.1.1 (2014-08-06)
------------------

- Fixes a bug where reserving a heterogenous group of reservations would
  sometimes lead to wrongly reserved spots.
  [href]

- The availability of partly available allocations in the search view is
  now limited to the time selected in the search.
  [href]

- Correctly aligns the time in the search view.
  [href]

- The search now defaults to 'available allocations only'.
  [href]

- Reservation dates are now always shown correctly in the manage view.
  [href]

1.1 (2014-08-05)
----------------

- Adds new search & reserve feature. On each resource, users may search
  for allocations. Those allocations may be selected and reserved in compound.
